Updated information about JVM flags